[gd_scene load_steps=4 format=2]

[ext_resource path="res://test_env/test_Game_MainLoop.gd" type="Script" id=1]
[ext_resource path="res://test_env/test_world.tscn" type="PackedScene" id=2]
[ext_resource path="res://test_env/test_GameUICamera.gd" type="Script" id=3]

[node name="Game_MainLoop" type="Node"]
script = ExtResource( 1 )

[node name="InterfaceMaster" type="HBoxContainer" parent="."]
margin_right = 1500.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameView_Container" type="ViewportContainer" parent="InterfaceMaster"]
margin_right = 1500.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="InterfaceMaster/GameView_Container"]
size = Vector2( 1500, 1080 )
handle_input_locally = false
render_target_update_mode = 3

[node name="GameUICamera" type="Camera2D" parent="InterfaceMaster/GameView_Container/Viewport"]
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 3 )

[node name="World" parent="InterfaceMaster/GameView_Container/Viewport/GameUICamera" instance=ExtResource( 2 )]

[node name="HBoxContainer" type="HBoxContainer" parent="InterfaceMaster"]
margin_left = 1504.0
margin_right = 1558.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="InterfaceMaster/HBoxContainer"]
margin_right = 54.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="InterfaceMaster/HBoxContainer/VBoxContainer"]
margin_right = 54.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="InterfaceMaster/HBoxContainer/VBoxContainer/CenterContainer"]
margin_top = 524.0
margin_right = 54.0
margin_bottom = 556.0

[node name="debuglabel1" type="Label" parent="InterfaceMaster/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 54.0
margin_bottom = 14.0
text = "test text"

[node name="debuglabel2" type="Label" parent="InterfaceMaster/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 54.0
margin_bottom = 32.0
text = "test text"
[connection signal="set_camera_bounding" from="." to="." method="_on_Game_MainLoop_set_camera_bounding"]
